--- a/index.html
+++ b/index.html
@@ -42,15 +42,15 @@ In this doc., you will work through Gregory Ulmer's four discourses of family, e
    
     <div class="row"> 
   <div class="column">
-    <img src="pgrid1.jpg" alt= decribe the image HERE for accessibility purposes>
-    <img src="pgrid2.jpg" alt= decribe the image HERE for accessibility purposes>
+    <img src="pgrid1.JPG" alt= decribe the image HERE for accessibility purposes>
+    <img src="pgrid2.JPG" alt= decribe the image HERE for accessibility purposes>
         </div>
 <div class="column">
-    <img src="pgrid3.jpg" alt= decribe the image HERE for accessibility purposes>
+    <img src="pgrid3.JPG" alt= decribe the image HERE for accessibility purposes>
     <img src="pgrid4.jpg" alt= decribe the image HERE for accessibility purposes>
         </div>
 <div class="column">    
-    <img src="pgrid5.jpg" alt= decribe the image HERE for accessibility purposes>
+    <img src="pgrid5.JPG" alt= decribe the image HERE for accessibility purposes>
     <img src="pgrid6.jpg" alt= decribe the image HERE for accessibility purposes >
     
   </div>
